Simple scene created in version 2.82 crashes Blender #77460
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#77460
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87
Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash:
211b6c29f7
Worked: 2.82
Just open the included scene file which contains nothing but shaded objects with modifiers and Blender will crash
CHESS_PROPS_FINAL_01.blend
Added subscriber: @ajlanaltug
#77894 was marked as duplicate of this issue
#77595 was marked as duplicate of this issue
#77557 was marked as duplicate of this issue
Simple scene created in version 2.82 crashes Blender???!!!!to Simple scene created in version 2.82 crashes BlenderAdded subscriber: @Alaska
Changed status from 'Needs Triage' to: 'Confirmed'
Opening the file in 2.82a shows a dependency cycle:
I suspect Blender 2.83 is crashing because of this. @ajlanaltug try to remove these dependency cycles from the 2.82a file, save it, then re-open in Blender 2.83.
In the meantime, I'm marking this as "confirmed" as I consider this a regression.
Ok will do. Thank you. Just a quick note though; what I did in that scene was just to create collection instances and transform them. I redid the whole thing from scratch in 2.83, saved it and it opens just fine.
Added subscriber: @mont29
Changed status from 'Confirmed' to: 'Needs User Info'
The issue here is that the
CHAIR
collection contains theCHAIR.001
object, which instantiate theCHAIR
collection... making depsgraph building loop forever.Not sure we are supposed to handle that situation, this is not allowed ever, so real bug here is that you managed to create such a broken relationship. We need to know how you did it?
Added subscribers: @rpopovici, @Zuorion-4, @ideasman42
Changed status from 'Needs User Info' to: 'Confirmed'
#77595 actually is giving easy way to reproduce such situation. This is a fairly critical bug in fact.
This issue was referenced by
b894480d68
This issue was referenced by
517f32045c
This issue was referenced by
89bde99674
This issue was referenced by
e936269304
This issue was referenced by
293b00beb5
This issue was referenced by
eaff606f2d
Changed status from 'Confirmed' to: 'Resolved'
Added subscribers: @lucasfalcao3d, @lichtwerk
This issue was referenced by
8289fc688b